Another attempted x overflow fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,11 @@
   src: url('../fonts/Overlock-Regular.ttf') format('truetype');
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
+
 body {
   font-family: 'Overlock', sans-serif;
   background-color: var(--off_white);
@@ -41,7 +46,6 @@ body {
   align-items: center;
   justify-content: center;
   text-align: center;
-  overflow-x: hidden;
 }
 
 header {
@@ -173,8 +177,8 @@ footer {
   background-color: var(--off_white);
   color: var(--pink);
   text-align: center;
-  padding: 1rem;
-  margin-top: 4rem;
+  padding: 0.5rem;
+  margin-top: 2rem;
 }
 
 /* === Animations === */
